Modelo e Animação Idle do Zumbi de Sangue
Adicionado o modelo e animação idle do Zumbi de Sangue. Ele está funcional, porém ainda precisa de suas animações de movimento.
O ovo gerador do mob também foi adicionado.

--- a/src/main/resources/assets/ordemparanormal/lang/en_us.json
+++ b/src/main/resources/assets/ordemparanormal/lang/en_us.json
@@ -2,5 +2,9 @@
 	"itemGroup.ordemparanormal": "Paranormal Order: MC",
 	
 	"item.ordemparanormal.grimorio_sangue": "Blood Grimoire",
-	"item.ordemparanormal.grimorio_energia": "Energy Grimoire"
+	"item.ordemparanormal.grimorio_energia": "Energy Grimoire",
+	
+	"entity.ordemparanormal.zumbi_sangue" : "Blood Zombie",
+	
+	"item.ordemparanormal.zumbi_sangue_spawn_egg": "Blood Zombie Spawn Egg"
 }
