--- a/src/main/resources/assets/ordemparanormal/lang/en_us.json
+++ b/src/main/resources/assets/ordemparanormal/lang/en_us.json
@@ -5,8 +5,10 @@
 	"item.ordemparanormal.grimorio_energia": "Energy grimoire",
 	
 	"entity.ordemparanormal.zumbi_sangue" : "Blood zombie",
+	"entity.ordemparanormal.zumbi_bestial" : "Bestial Blood zombie",
 	"entity.ordemparanormal.aberrado" : "Aberrant",
 	
 	"item.ordemparanormal.zumbi_sangue_spawn_egg": "Blood zombie spawn egg",
+	"item.ordemparanormal.zumbi_bestial_spawn_egg": "Bestial Blood zombie spawn egg",
 	"item.ordemparanormal.aberrado_spawn_egg": "Aberrant spawn egg"
 }
