--- a/src/main/resources/assets/ordemparanormal/lang/pt_br.json
+++ b/src/main/resources/assets/ordemparanormal/lang/pt_br.json
@@ -1,12 +1,14 @@
 {
 	"itemGroup.ordemparanormal": "Ordem Paranormal: MC",
 	
-	"item.ordemparanormal.grimorio_sangue": "Grimório de sangue",
-	"item.ordemparanormal.grimorio_energia": "Grimório de energia",
+	"item.ordemparanormal.grimorio_sangue": "Grimório de Sangue",
+	"item.ordemparanormal.grimorio_energia": "Grimório de Energia",
 	
-	"entity.ordemparanormal.zumbi_sangue" : "Zumbi de sangue",
+	"entity.ordemparanormal.zumbi_sangue" : "Zumbi de Sangue",
+	"entity.ordemparanormal.zumbi_bestial" : "Brutish Blood zombie",
 	"entity.ordemparanormal.aberrado" : "Aberrado",
 	
-	"item.ordemparanormal.zumbi_sangue_spawn_egg": "Ovo gerador de zumbi de sangue",
+	"item.ordemparanormal.zumbi_sangue_spawn_egg": "Ovo gerador de zumbi de Sangue",
+	"item.ordemparanormal.zumbi_bestial_spawn_egg": "Ovo gerador de zumbi de Sangue bestial",
 	"item.ordemparanormal.aberrado_spawn_egg": "Ovo gerador de Aberrado"
 }
